--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
     <ol id="fruits"> 
     </ol>
 </body>
-<script src="/home/natali/git_dev/test task/script.js"></script>
+<script src="script.js"></script>
 </html>
